@@ -23,6 +23,7 @@ Fixed:
 - Fixed Fluid Shell item filling
 - Fixed tracer not rendering for Drop Mortar Shell
 - Fixed initial projectile chunkloading breaking Valkyrien Skies Quick-Firing Breeches
+- Fixed illegal autocannon connections on creative block placement
 
 ===
 
